# ginger-db

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  database.toml  db.design.json  docker-compose.yml  metadata.toml  releaser.toml  services.toml
.github/workflows/: CI.yml  images.yml
dj/: Dockerfile  docker-compose.yml  requirements.txt  run.sh
dj/server/: settings.py  urls.py
dj/src/: admin.py  models.py  views.py
dj/src/migrations/: 0001_initial.py  0003_alter_student_has_cab_service.py
dj/src/orm_templates/: sqlalchemy-model.template
output/: models.py
runner-image/: README.md  docker-compose.yml  pyproject.toml  run.sh  services.toml
runner-image/server/: settings.py  urls.py
runner-image/src/: admin.py  models.py  views.py
runner-image/src/migrations/: 0002_student_has_cab_service.py  0004_course_duration.py
runner-image/src/orm_templates/: ginger-dj.template  rust-diesel.template  sqlalchemy-model.template
runner-image/src/orm_templates/ts/: index.template  model.template
runner-main/: admin.py  db.design.json  docker-compose.yml  models.py
src/: configure.rs  db.design.json  init.rs  main.rs  render.rs  templates.rs  types.rs  ui.rs  up.rs  utils.rs  utils_v2.rs
templates/: admin.py.tpl  docker-compose.yml.tpl  models.py.tpl
