[package]
description = "A cli tool for working with different types of databases"
edition = "2021"
name = "ginger-db"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
MetadataService = {path = "./MetadataService_client"}
clap = {version = "4.5.7", features = ["derive"]}
crossterm = "0.28.1"
inquire = {version = "0.6.2", features = ["date"]}
ratatui = "0.28.1"
schema-gen-service = {path = "./schema-gen-service_client"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tera = "1.20.0"
tokio = {version = "1", features = ["full"]}
toml = "0.8.14"

[package.metadata]
organization = "ginger-society"
